1. background 2. background overlay 3. form 4. style

--- a/Build a Survey Form/style.css
+++ b/Build a Survey Form/style.css
@@ -1,9 +1,42 @@
 body {
     text-align: center;
     background-color: #EEEEEE;
-    padding: 1rem;
-    margin: 1rem;
     font-family: "Helvetica"
+}
+
+#main {
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: url("img/IMG_5215.JPG") center center no-repeat;
+    background-size: cover;
+    position: fixed;
+    box-shadow: inset 2000px 0 0 0 rgba(255, 255, 255, 0.8);
+}
+
+#title {
+    margin-top: 2rem;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #45505b;
+}
+
+form {
+    padding: 2rem;
+    width: 50%;
+    margin: auto;
+    line-height: 1.5;
+    background-color: #1565C0;
+    border-radius: 0.5rem;
+    opacity: 0.7;
+    text-align: left;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 100%;
+    border-radius: 0.2rem;
 }
 
 footer {
