--- a/Build a Survey Form/style.css
+++ b/Build a Survey Form/style.css
@@ -1,17 +1,18 @@
 body {
     text-align: center;
     background-color: #EEEEEE;
-    font-family: "Helvetica"
+    font-family: "Helvetica";
 }
 
 #main {
     top: 0;
     width: 100%;
     height: 100vh;
-    background: url("img/IMG_5215.JPG") center center no-repeat;
+    background: url("https://xuyanghan.github.io/assets/img/IMG_5215.JPG") center center no-repeat;
     background-size: cover;
     position: fixed;
     box-shadow: inset 2000px 0 0 0 rgba(255, 255, 255, 0.8);
+    overflow-y: auto;
 }
 
 #title {
@@ -33,10 +34,24 @@ form {
     text-align: left;
 }
 
-input {
+form .text-input {
     margin-bottom: 1rem;
     width: 100%;
     border-radius: 0.2rem;
+}
+
+form .input-textarea {
+    width: 100%;
+    border-radius: 0.2rem;
+}
+
+form .form-group {
+    margin-bottom: 1rem;
+}
+
+form label {
+    font-weight: 700;
+    color: black;
 }
 
 footer {
