--- a/Build a Product Landing Page/style.css
+++ b/Build a Product Landing Page/style.css
@@ -3,10 +3,106 @@ header a {
     font-weight: 600;
 }
 
-#features {
+#nav-bar {
+    background-image: linear-gradient(to right, rgb(36, 39, 179), rgb(187, 39, 47));
+    box-shadow: inset 2000px 0 0 0 rgba(0, 0, 0, 0.1);
+}
+
+#landing {
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp1914091.jpg&f=1&nofb=1');
+    background-size: cover;
+    height: 400px;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    box-shadow: inset 2000px 0 0 0 rgba(0, 0, 0, 0.3);
+}
+
+#landing-title {
+    font-size: 5rem;
+    font-weight: 500;
+}
+
+section {
+    padding: 60px 0;
+    overflow: hidden;
+}
+
+.section-title {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.section-title h2 {
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+    color: #45505b;
+}
+
+.section-title h2::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 120px;
+    height: 1px;
+    background: #ddd;
+    bottom: 1px;
+    left: calc(50% - 60px);
+}
+
+.section-title h2::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #0563bb;
+    bottom: 0;
+    left: calc(50% - 20px);
+}
+
+.section-title p {
+    margin-bottom: 0;
+}
+
+#models {
     background-color: #ECEFF1;
 }
 
-#pricing {
+.cards {
+    display: flex;
+    margin: 0 10%;
+}
+
+.card {
+    margin: 0 auto;
+}
+
+.card-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.card img {
+    padding: 1rem;
+}
+
+#contact {
     background-color: #ECEFF1;
+}
+
+#video {
+    display: block;
+    margin: 0 auto;
+}
+
+form {
+    display: block;
+    margin: auto;
+    padding: 0 2rem;
+    width: 50%;
 }
