1. add codes 2. add links

--- a/Build a Technical Documentation Page/style.css
+++ b/Build a Technical Documentation Page/style.css
@@ -34,6 +34,16 @@ p {
     padding: 0.5rem;
 }
 
+#main-doc a {
+    color: #cbd0d0;
+    text-decoration: underline;
+}
+
+a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
 li {
     color: #cbd0d0;
 }
